# project-LICHEN

./: AGENTS.md  BEADSDUMP.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICHEN-plan.md  LICHEN-spec.md  README.md  constants.toml  flash-t1000e-uf2.sh  lichen_t1000e.uf2  manifest  rfc2217-servers.sh  smp-flash.py
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: ci.yml
docs/: meshtastic-compat-dev.md
firmware/bridge/: rak4631_bridge.ino
lichen/: README.md  west.yml
lichen/apps/gateway/: CMakeLists.txt  Kconfig  prj.conf  sections-ram.ld
lichen/apps/gateway/boards/: native_sim.conf  native_sim.overlay  nrf52840dk_nrf52840.conf  nucleo_wl55jc.overlay  t1000_e_nrf52840.conf  t1000_e_nrf52840.overlay  t_deck_esp32s3_procpu.conf  t_echo_nrf52840.conf  t_echo_nrf52840.overlay
lichen/apps/gateway/src/: ble_uart.c  ble_uart.h  main.c
lichen/apps/puck/: prj.conf
lichen/apps/puck/boards/: heltec_lora32_v3.conf  heltec_lora32_v3.overlay  heltec_wifi_lora32_v3_esp32s3_procpu.conf  heltec_wifi_lora32_v3_esp32s3_procpu.overlay  rak4631_nrf52840.conf  rak4631_nrf52840.overlay  t1000_e_nrf52840.conf  t1000_e_nrf52840.overlay  t_deck_esp32s3_procpu.conf  t_deck_esp32s3_procpu.overlay  t_echo_nrf52840.conf  t_echo_nrf52840.overlay  tbeam_supreme.conf  (+3 more)
lichen/drivers/: CMakeLists.txt  Kconfig
lichen/drivers/gnss/: CMakeLists.txt  Kconfig  gnss_ag3335.c
lichen/drivers/lora/: CMakeLists.txt  Kconfig  lora_sim.c
lichen/lib/native/: native.c
lichen/zephyr/: module.yml
python/: README.md  pyproject.toml
python/examples/: basic_two_node.py  chaos_testing.py  mesh_topology.py  pcap_capture.py
python/src/lichen/: __init__.py  constants.py  gradient.py  node.py
python/src/lichen/announce/: __init__.py  coords.py  processor.py  scheduler.py
python/src/lichen/coap/: __init__.py  node_channel.py  resources.py  schc_channel.py  transport.py  udp_server.py
python/src/lichen/crypto/: schnorr48.py
python/src/lichen/dashboard/: __init__.py  app.py
python/src/lichen/interface/: __init__.py  framing.py  messages.py
python/src/lichen/ipv6/: __init__.py  addr.py  icmpv6.py  packet.py  udp.py
python/src/lichen/link/: link_layer.py
python/src/lichen/radio/: base.py  sim_client.py
python/src/lichen/routing/: router.py
python/src/lichen/rpl/: __init__.py  dao.py  dodag.py
python/src/lichen/schc/: __init__.py  codec.py  context.py  fragment.py  headers.py  reassembly.py  rules.py
python/src/lichen/senml/: codec.py  profiles.py
python/src/lichen/sim/: api.py  chaos.py  events.py  medium.py  metrics.py  node_server.py  pcap.py  protocol.py  server.py  simulation.py
python/tests/: test_node.py  test_node_coap_integration.py  test_vectors.py
python/tests/announce/: test_coords.py  test_messages.py  test_processor.py  test_scheduler.py
python/tests/coap/: test_messages_resource.py  test_resource_directory.py  test_resources.py  test_schc_channel.py  test_senml_resources.py  test_sos_resource.py  test_transport.py  test_udp_server.py
python/tests/crypto/: test_schnorr48.py
python/tests/dashboard/: test_dashboard.py
python/tests/interface/: test_framing.py  test_messages.py
python/tests/ipv6/: test_addr.py  test_icmpv6.py  test_packet.py  test_udp.py
python/tests/link/: test_cad.py  test_link_layer.py
python/tests/loadng/: test_rreq_jitter.py
python/tests/radio/: test_base.py
python/tests/routing/: test_router.py
python/tests/rpl/: test_dao.py  test_dodag.py
python/tests/schc/: __init__.py  test_codec.py  test_context.py  test_fragment.py  test_headers.py  test_headers_rules.py  test_mapping.py  test_reassembly.py
python/tests/senml/: test_codec.py  test_profiles.py
python/tests/sim/: test_api.py  test_chaos.py  test_metrics.py  test_multinode.py  test_node_server.py  test_simulation.py  test_simulation_logging.py  test_topology_change.py  test_tx_jitter.py
rust/: Cargo.toml  README.md
rust/lichen-apps/: Cargo.toml
rust/lichen-apps/src/: cli.rs  lib.rs
rust/lichen-cli/: Cargo.toml
rust/lichen-cli/src/: commands.rs  main.rs  output.rs
rust/lichen-coap/: Cargo.toml
rust/lichen-coap/src/: lib.rs  message.rs  option.rs
rust/lichen-core/: Cargo.toml
rust/lichen-core/src/: addr.rs  announce.rs  constants.rs  icmpv6.rs  ipv6.rs  lib.rs  loadng.rs
rust/lichen-embassy/: Cargo.toml
rust/lichen-embassy/src/: lib.rs  mock.rs
rust/lichen-gateway/: Cargo.toml
rust/lichen-gateway/src/: config.rs  gateway.rs  lib.rs  slip.rs
rust/lichen-hal/: Cargo.toml
rust/lichen-hal/src/: lib.rs
rust/lichen-link/: Cargo.toml
rust/lichen-link/src/: frame.rs  identity.rs  lib.rs  link_layer.rs  replay.rs  schnorr.rs
rust/lichen-node/: Cargo.toml
rust/lichen-node/src/: lib.rs  node.rs  routing.rs
rust/lichen-rpl/: Cargo.toml
rust/lichen-rpl/src/: dodag.rs  lib.rs  messages.rs  routing.rs  trickle.rs
rust/lichen-schc/: Cargo.toml
rust/lichen-schc/src/: codec.rs  fragment.rs  lib.rs  rules.rs
rust/lichen-senml/: Cargo.toml
rust/lichen-senml/src/: cbor.rs  lib.rs  record.rs
rust/lichen-sim/: Cargo.toml
rust/lichen-sim/src/: client.rs  lib.rs
spec/: 01-architecture.md  02-physical-link.md  03-adaptation.md  04-network.md  05-routing.md  06-security.md  07-transport-app.md  08-nodes.md  09-packets-timing.md  10-implementation.md  11-lci.md  12-apps.md  README.md  appendix-design-rationale.md  appendix-misc.md  appendix-rpl.md  appendix-schc.md  appendix-senml.md
spec/drafts/: README.md  draft-lichen-link-01.md  draft-lichen-ota-00.md  draft-lichen-rpl-lora-00.md  draft-lichen-schc-lora-00.md  draft-lichen-schnorr-00.md
spec/lichen-native/: 00-overview.md  01-framing.md  02-common.md  03-hello.md  04-config.md  05-messaging.md  06-mesh-state.md  07-node-info.md  08-logging.md  09-ota.md  10-raw-frame.md
standards/: README.md  crypto.md  ham-radio.md  ietf-drafts.md  ietf-rfcs.md  lora.md  other.md
test/vectors/: README.md  generate.py  link_frame.json  schc_compression.json  schema.json
tools/wireshark/: lichen.lua
zephyr/: README.md  west.yml
zephyr/apps/puck/: CMakeLists.txt
(+47 files in other folders)
