[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lichen"
version = "0.1.0"
description = "LICHEN: LoRa IPv6 CoAP Hybrid Extended Network"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "Mark Atwood" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: System :: Networking",
]
dependencies = [
    "aiocoap>=0.4.7",
    "anyio>=4.0",
    "starlette>=0.35",
    "uvicorn>=0.27",
    "pynacl>=1.5",
    "structlog>=24.1",
    "cbor2>=5.6",
    "textual>=0.80.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
lichen-sim = "lichen.sim.server:main"
lichen-tui = "lichen.tui.app:main"
lichen-dashboard = "lichen.dashboard.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lichen"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
